<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView  
	android:id="@+id/tv_des"
	android:textSize="20sp"
	android:textStyle="bold"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:textColor="#0000ff"
    android:text="@string/des"
    />
    
    <EditText
    android:id="@+id/et_des"
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    />
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView  
	android:id="@+id/tv_ssid"
	android:textSize="20sp"
	android:textStyle="bold"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:textColor="#0000ff"
    android:text="@string/ssid"
    />
    
    <EditText
    android:id="@+id/et_ssid"
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    />
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView  
	android:id="@+id/tv_key"
	android:textSize="20sp"
	android:textStyle="bold"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:textColor="#0000ff"
    android:text="@string/key"
    />
    
    <EditText
    android:id="@+id/et_key"
    android:layout_width="200dip"
    android:layout_height="wrap_content"/>
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView  
	android:id="@+id/tv_long"
	android:textSize="20sp"
	android:textStyle="bold"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:textColor="#0000ff"
    android:text="@string/longitude"
    />
    
    <EditText
    android:id="@+id/et_long"
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    android:numeric="integer"/> 
    
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView  
	android:id="@+id/tv_lat"
	android:textSize="20sp"
	android:textStyle="bold"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:textColor="#0000ff"
    android:text="@string/latitude"
    />
    
    <EditText
    android:id="@+id/et_lat"
    android:layout_width="200dip"
    android:layout_height="wrap_content"
    android:numeric="integer"/>
    
    </LinearLayout>
    
    <Button
    android:id="@+id/upload_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/upload_btn"
    />
    
    </LinearLayout>
